# message-insights

./: .gitignore  README.md  generate_viewer.py  package-lock.json  package.json  viewer_template.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
