[package]
name = "message-insights"
version = "0.1.0"
description = "Privacy-first native macOS app for viewing and analyzing your Messages"
authors = ["andgly95"]
license = "MIT"
repository = "https://github.com/andgly95/message-insights"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "message_insights_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
plist = "1.7"
dirs = "5.0"
